# trexio_s3

./: Cargo.toml  LICENSE  Makefile  README.md  trexio_s3.pc.in
include/: trexio_s3_rust.h
src/: lib.rs  test.c
