[package]
name = "rust_s3"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.82.0"
once_cell = "1.21.3"
thread_local = "1.1.8"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]      # Creates dynamic lib
#crate-type = ["staticlib"] # Creates static lib

[[bin]]
name = "hello"
path = "src/hello.rs"
